WebBrickClient に Windows Phone を追加

--- a/example/WebBrickClient/WebBrickClient.WinPhone/Resources/AppResources.resx
+++ b/example/WebBrickClient/WebBrickClient.WinPhone/Resources/AppResources.resx
@@ -122,16 +122,16 @@
     <comment>Controls the FlowDirection for all elements in the RootFrame. Set to the traditional direction of this resource file's language</comment>
   </data>
   <data name="ResourceLanguage" xml:space="preserve">
-    <value>en-US</value>
+    <value>ja-JP</value>
     <comment>Controls the Language and ensures that the font for all elements in the RootFrame aligns with the app's language. Set to the language code of this resource file's language.</comment>
   </data>
   <data name="ApplicationTitle" xml:space="preserve">
-    <value>MY APPLICATION</value>
+    <value>マイ アプリケーション</value>
   </data>
   <data name="AppBarButtonText" xml:space="preserve">
-    <value>add</value>
+    <value>追加</value>
   </data>
   <data name="AppBarMenuItemText" xml:space="preserve">
-    <value>Menu Item</value>
+    <value>メニュー項目</value>
   </data>
 </root>
